Add Discord support

--- a/default.cfg
+++ b/default.cfg
@@ -494,3 +494,15 @@ bnet_custom_pvpgnrealmname = PvPGN Realm
 # bnet3_custom_exeversionhash = 219 152 153 144
 # bnet3_custom_passwordhashtype = pvpgn
 # bnet3_custom_pvpgnrealmname = PvPGN Realm
+
+#############################
+# DISCORD BOT CONFIGURATION #
+#############################
+
+### discord bot token (leave empty to disable it)
+
+discord_bot_token = 
+
+### id of the channel that the bot should listen to
+
+discord_channel_id = 
